博客信息展示一集成了markwodn语法解析，和代码语法高亮以及代码行号

--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
+    "markdown-navbar": "^1.4.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -44,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/markdown-navbar": "^1.4.0",
+    "@types/react-syntax-highlighter": "^15.5.5"
   }
 }
